# gorg

./: .gitignore  LICENSE  Makefile  README.md  TransparentWindow.cpp  chat.cpp  chat.h  drun.cpp  drun.h  equation.h  finder.cpp  finder.h  flake.nix  gorg.cpp  levenshtein.cpp  levenshtein.h  main.cpp  match.h  meson.build  pluginLoader.cpp  run.cpp  settings.cpp  stringMatch.cpp  stringMatch.h  widgets.h
external_plugins/: meson.build  sample.cpp  sample.h
external_plugins/subprojects/obsidian/: meson.build  obsidian.cpp  obsidian.h
external_plugins/subprojects/sample/: meson.build  sample.cpp  sample.h
external_plugins/subprojects/wallpaper/: meson.build  wallpaper.cpp  wallpaper.h
include/: TransparentWindow.h  ai.h  chat.h  dmenu.h  drun.h  equation.h  finder.h  gorg.h  match.h  plugin.h  pluginLoader.h  run.h  settings.h  stringMatch.h  web.h
pch/: gorg_pch.h
plugins/: ai.cpp  chat.cpp  chat.h  dmenu.cpp  drun.cpp  equation.cpp  match.h  plugin.h  run.cpp  run.h  web.cpp
tests/: test_core.cpp
